ROS_Workspace/src/UAVMain/log/build_2023-07-17_14-42-56/UAVMain/stderr.log
  File "/home/teamvision/Desktop/ROS_Workspace/Honours_a1797823_a1764124/ROS_Workspace/src/UAVMain/install/UAVMain/lib/python3.8/site-packages/UAVMain/UAVMain.py", line 38
    self.LEDState = self.determineLEDs(3:5)
                                        ^
SyntaxError: invalid syntax

